# gtd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  manage.py  mockup.html  pyproject.toml  render.yaml  todo.md
.claude/commands/: gtd-capture.md  gtd-check.md  gtd-coach.md  gtd-dashboard.md  gtd-inbox.md  gtd-review.md
.github/workflows/: ci.yml
bear_reader/: apps.py  cli.py  models.py  reader.py  serializers.py  urls.py  views.py
bear_reader/tests/: conftest.py  test_api.py  test_cli.py  test_models.py  test_reader.py  test_scaffold.py
data/: CLAUDE.md
data/home/: config.yml
data/work/: config.yml
frontend/: .prettierignore  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend-mobile/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend-mobile/src/: App.test.tsx  App.tsx  api.ts  styles.css
frontend/e2e/: bucket-move.spec.ts  capture.spec.ts  delete.spec.ts  detail-panel.spec.ts  editing.spec.ts  fixtures.ts  global-setup.ts  keyboard-nav.spec.ts  project-reorder.spec.ts  search.spec.ts  spotlight.spec.ts  workflow.spec.ts  working-on.spec.ts
frontend/src/: AgentLogView.test.tsx  AgentLogView.tsx  (+41 more)
gtd_api/: CLAUDE.md  apps.py  mobile_views.py  serializers.py  urls.py  urls_mobile.py  views.py
gtd_core/: CLAUDE.md  agent_launch.py  ai.py  apps.py  audit.py  cloud_sync.py  dates.py  healthcheck.py  importer_nirvana.py  maintenance.py  models.py  recurring.py  repository.py  service.py  snapshot.py  storage.py
gtd_site/: settings.py  urls.py  urls_cloud.py  wsgi.py
historic_import/: README.md  home_Export_1775809417.csv  work_Export_1775809433.csv
scripts/: coverage.sh  e2e.sh  gtd.plist.template  gunicorn_config.py  lint.sh  migrate_sequential_to_max_next_items.py  render-entrypoint.sh  serve.sh  setup-dev.sh
(+24100 files in other folders)
