[project]
name = "gtd"
version = "0.1.0"
description = "Local GTD app backed by markdown + YAML frontmatter files"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "python-frontmatter>=1.1",
    "whitenoise>=6.7",
    "gitpython>=3.1",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-django>=4.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["."]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "gtd_site.settings"
python_files = ["test_*.py", "tests.py"]
addopts = "-ra"
